11_visualization/green-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training
  name: green
spec:
  hosts:
    - green.training.svc.cluster.local
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: green.training.svc.cluster.local
